--- a/csgo/index.html
+++ b/csgo/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <title>Wiki CSGO</title>
+         <script>
+           console.log("pagina de cs go");
+           console.info("esta version todavia no esta disponible")
+        </script>
     </head>
     <body>
         <header>
